test/controlplane/policies/services/manifests/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: test
spec:
  selector:
    matchLabels:
      name: echo
  template:
    metadata:
      labels:
        name: echo
    spec:
      containers:
      - name: echo-container
        image: quay.io/cilium/json-mock:v1.3.3@sha256:f26044a2b8085fcaa8146b6b8bb73556134d7ec3d5782c6a04a058c945924ca0
        ports:
        - containerPort: 80
          hostPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    name: echo
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: toservices-test
  namespace: kube-system
spec:
  egress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
    toServices:
    - k8sService:
        namespace: test
        serviceName: echo
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: echo
