test/controlplane/policies/services/manifests/policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: toservices-test
  namespace: kube-system
spec:
  egress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
    toServices:
    - k8sService:
        namespace: test
        serviceName: echo
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: echo
