test/controlplane/policies/services/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    name: echo
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetes
  namespace: default
spec:
  clusterIP: 10.96.0.1
  clusterIPs:
  - 10.96.0.1
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 6443
  sessionAffinity: None
  type: ClusterIP
